--- a/Open the door/README
+++ b/Open the door/README
@@ -1,1 +1,6 @@
+# Auto install - Open the door
+```
+sudo apt install curl -y && source <(curl -s https://raw.githubusercontent.com/lthuan2011/Autonity/main/Open%20the%20door/auto_install)
+
+```
 
